<resources>
    <string name="app_name">JobZone</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">JobZone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="job_demand">Job demand</string>
    <string name="search_job_offers">Search job offers</string>
    <string name="search_job">Search Job</string>
    <string name="demands">Demands</string>
    <string name="job_places">Job Places</string>
    <string name="your_name">Your name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address, City or Zip Code</string>
    <string name="search_for">Search for a job how...</string>
    <string name="remove_snow">Remove snow</string>
    <string name="gardening">Gardening</string>
    <string name="babysiter">Babysiter</string>
    <string name="pet">Pet</string>
    <string name="other">Other</string>
    <string name="detail">Detail how you are and what you can do.</string>
    <string name="number">Number</string>
    <string name="verify_phone_number">Verify mobile number</string>
    <string name="code">Code</string>
    <string name="send_emand">Send Demand</string>
    <string name="I_need_help_with">I need help with</string>
    <string name="offer_detail">Offer detail</string>
    <string name="salary">Salary</string>
    <string name="send_offer">Send Offer</string>
    <string name="choose">Choose</string>
    <string name="offer">Offer</string>
    <string name="demand">Demand</string>
    <string name="your_phone_number">Your mobile number</string>
    <string name="send">Send</string>
    <string name="jobs_near_home">Jobs near home!</string>
    <string name="try_again">Try again!</string>
    <string name="missing_a_field">You are missing a field!</string>
    <string name="code_sent_successfully">CODE sent successfully!</string>
    <string name="generic_failure">Generic failure!</string>
    <string name="no_service">No service!</string>
    <string name="null_pdu">Null PDU!</string>
    <string name="radio_off">Radio off!</string>
    <string name="sms_delivered">SMS delivered!</string>
    <string name="sms_not_delivered">SMS not delivered!</string>
    <string name="write_the_code">Write the code!</string>
    <string name="write_the_message">Write the message!</string>
    <string name="ready">Ready!</string>
    <string name="write_a_place">Write a place!</string>
    <string name="contact">Contact</string>
    <string name="sms_sent_successfully">SMS sent successfully!</string>
    <string name="phone_number">Mobile number</string>
    <string name="manage">Manage</string>
    <string name="send_a_Message">Send a Message</string>
    <string name="contact_name">Contact name:</string>
    <string name="see_the_offer">See the offer</string>


</resources>


