<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            >



            <EditText
                android:id="@+id/name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:inputType="textPersonName"
                android:hint="@string/your_name"
                />


            <TextView
                android:id="@+id/address"
                android:layout_below="@id/name"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textColor="#202020"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />


            <EditText
                android:id="@+id/locate"
                android:layout_below="@id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:hint="@string/enter_address"
                />


            <TextView
                android:id="@+id/title_add"
                android:layout_below="@id/locate"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="#202020"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I_need_help_with" />

            <RadioGroup
                android:id="@+id/categories"
                android:layout_below="@id/title_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/Remove_snow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove_snow" />

                <RadioButton
                    android:id="@+id/Gardening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gardening" />

                <RadioButton
                    android:id="@+id/Babysiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/babysiter" />

                <RadioButton
                    android:id="@+id/Pet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pet" />


                <RadioButton
                    android:id="@+id/Other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other" />



            </RadioGroup>

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categories"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#202020"
                android:layout_marginTop="15dp"
                android:text="@string/offer_detail" />

            <EditText
                android:id="@+id/detailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/salary"
                android:layout_below="@id/detailText"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#202020"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary" />

            <EditText
                android:id="@+id/money"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/salary"
                />


            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/money"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#202020"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPhone"
                android:inputType="number" />

            <Button
                android:id="@+id/btnSendSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/phoneNumber"
                android:text="@string/verify_phone_number" />

            <EditText
                android:id="@+id/codeText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSendSMS"
                android:inputType="number"
                android:hint="@string/code" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/codeText"
                android:onClick="send"
                android:textStyle="bold"
                android:background="#6d84b4"
                android:textColor="#fff"
                android:layout_marginTop="15dp"
                android:text="@string/send_offer" />






        </RelativeLayout>
    </LinearLayout>
    </ScrollView>







    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"
        app:itemIconTint="@android:color/tab_indicator_text"
        app:itemTextColor="@android:color/tab_indicator_text"/>






</RelativeLayout>