<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="false"
            android:focusableInTouchMode="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                >


                <TextView
                    android:id="@+id/textChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#202020"
                    android:layout_marginTop="70dp"
                    android:text="@string/choose" />


                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textChoose"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/radioButtonOffer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/offer" />

                    <RadioButton
                        android:id="@+id/radioButtonDemand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/demand" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textPhone"
                    android:layout_below="@+id/rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#202020"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_phone_number" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textPhone"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnSendSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneNumber"
                    android:layout_marginTop="15dp"
                    android:text="@string/verify_phone_number" />

                <EditText
                    android:id="@+id/codeText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSendSMS"
                    android:inputType="number"
                    android:hint="@string/code" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/codeText"
                    android:onClick="send"
                    android:textStyle="bold"
                    android:background="#6d84b4"
                    android:layout_marginTop="15dp"
                    android:textColor="#fff"
                    android:text="Login" />





            </RelativeLayout>
        </LinearLayout>
    </ScrollView>





    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"
        app:itemIconTint="@android:color/tab_indicator_text"
        app:itemTextColor="@android:color/tab_indicator_text"/>




</RelativeLayout>